<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_title_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_title_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_target_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_btn_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_btn_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_target_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintBottom_toTopOf="@+id/guideline_title_bottom"
        app:layout_constraintTop_toTopOf="@+id/guideline_title_top">
        <TextView
            android:id="@+id/day_count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeMaxTextSize="50sp"
            android:autoSizeStepGranularity="2sp"
            android:gravity="left|center"
            android:textColor="#000000"
            android:text="환영합니다!\n학습을 진행하기 전에\n몇 가지 설정을 시작할게요."/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="6"
        app:layout_constraintBottom_toTopOf="@+id/guideline_target_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_target_end"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_title_bottom">

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="32dp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:gravity="bottom|left"
            android:text="닉네임"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/user_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="32dp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/tv_underline"
            android:gravity="center|left"
            android:textColor="@color/black"
            android:maxLength="5"
            android:selectAllOnFocus="true"
            android:imeOptions="actionNext"/>

        <TextView
            android:id="@+id/target_word_count_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="32dp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:gravity="bottom|left"
            android:text="일일 목표 단어 개수"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/target_word_count"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="32dp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/tv_underline"
            android:gravity="center|left"
            android:hint="@string/word_target_hint"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:maxLength="3"
            android:selectAllOnFocus="true"
            android:imeOptions="actionDone"/>

        <TextView
            android:id="@+id/target_day_tv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="32dp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:gravity="bottom|left"
            android:text="반복 주기"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="5">

            <EditText
                android:id="@+id/target_day1"
                android:inputType="number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="32dp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/tv_underline"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:text="@string/day_target1"
                android:maxLength="2"
                android:enabled="false"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/target_day2"
                android:inputType="number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="32dp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/tv_underline"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:text="@string/day_target2"
                android:maxLength="2"
                android:enabled="false"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/target_day3"
                android:inputType="number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="32dp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/tv_underline"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:text="@string/day_target3"
                android:maxLength="2"
                android:enabled="false"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/target_day4"
                android:inputType="number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="32dp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:background="@drawable/tv_underline"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:text="@string/day_target4"
                android:maxLength="2"
                android:enabled="false"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/target_day5"
                android:inputType="number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="32dp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:background="@drawable/tv_underline"
                android:textColor="@color/black"
                android:text="@string/day_target5"
                android:maxLength="2"
                android:enabled="false"
                android:imeOptions="actionDone"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline_btn_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_btn_top">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoSizeMaxTextSize="50dp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/btn_disabled_confirm"
            android:clickable="false"
            android:text="확인"
            android:textColor="#B6BACB" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>